--- a/server/dashboard.html
+++ b/server/dashboard.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="icon" href="./public/logo.svg" type="image/svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <link href="./public/tailwind.css" rel="stylesheet" />
         <link href="./public/style.css" rel="stylesheet" />
